// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`config surface contract > keeps every field of the exportable visual config 1`] = `
[
  "backgroundOpacity",
  "cadenzaTuning",
  "cappellaTuning",
  "claddaghTuning",
  "classicTuning",
  "dioramaTuning",
  "disableVisualizerGeometricBackground",
  "disableVisualizerVignette",
  "followSystemTheme",
  "fumeTuning",
  "harmonySubtitleBackground",
  "hidePlayerTranslationSubtitle",
  "latentBackgroundTuning",
  "lyricsCustomFontFamily",
  "lyricsFontFallbackFamilies",
  "lyricsFontScale",
  "lyricsFontStyle",
  "lyricsFontWeight",
  "monetBackgroundTuning",
  "monetTuning",
  "nomandBackgroundTuning",
  "partitaTuning",
  "pendoloTuning",
  "randomVisualizerModePerSong",
  "showHarmonySubtitle",
  "showSubtitleTranslation",
  "songThemeAutoGenerateEnabled",
  "songThemeAutoSwitchEnabled",
  "sonnetTuning",
  "stageTrackPillMode",
  "stageTrackPillOnHome",
  "stageTrackPillTimeoutSec",
  "staticMode",
  "subtitleContentMode",
  "subtitleFontFallbackFamilies",
  "subtitleFontFamily",
  "subtitleFontInheritsLyrics",
  "subtitleFontScale",
  "subtitleFontStyle",
  "subtitleFontWeight",
  "subtitleOverlayBackground",
  "subtitleOverlayOpacity",
  "temperaTuning",
  "themeGenerationSource",
  "tiltTuning",
  "urlBackgroundList",
  "urlBackgroundSelectedId",
  "useCoverColorBg",
  "visualizerBackgroundMode",
  "visualizerMode",
  "visualizerOpacity",
  "visualizerTunings",
]
`;

exports[`config surface contract > keeps every field of the synced visual settings document 1`] = `
[
  "backgroundOpacity",
  "cadenzaTuning",
  "cappellaTuning",
  "claddaghTuning",
  "classicTuning",
  "dioramaTuning",
  "followSystemTheme",
  "fumeTuning",
  "grid3dCardStyle",
  "hidePlayerTranslationSubtitle",
  "homeLayoutStyle",
  "latentBackgroundTuning",
  "lyricsFontFallbackFamilies",
  "lyricsFontScale",
  "lyricsFontStyle",
  "lyricsFontWeight",
  "monetBackgroundTuning",
  "monetTuning",
  "nomandBackgroundTuning",
  "partitaTuning",
  "pendoloTuning",
  "randomVisualizerModePerSong",
  "showSubtitleTranslation",
  "sonnetTuning",
  "subtitleContentMode",
  "subtitleFontFallbackFamilies",
  "subtitleFontFamily",
  "subtitleFontInheritsLyrics",
  "subtitleFontStyle",
  "subtitleFontWeight",
  "subtitleOverlayBackground",
  "temperaTuning",
  "tiltTuning",
  "urlBackgroundList",
  "urlBackgroundSelectedId",
  "visualizerBackgroundMode",
  "visualizerMode",
  "visualizerOpacity",
  "visualizerTunings",
]
`;
